--- a/book/book.bib
+++ b/book/book.bib
@@ -1,23 +1,14 @@
-@article{oo-larman,
-  author = 	 {Craig Larman},
-  title = 	 {Protected Variation: The Importance of Being Closed},
-  journal = {IEEE Software},
-  year = 	 {2001},
-  pages = 	 {89--91},
+@article{getters-setters-silveira,
+  author = 	 {Paulo Silveira},
+  title = 	 {Como não aprender orientação a objetos: getters e setters},
+  year = 	 {2006},
   howpublished = {\url{http://www.iturls.com/english/expert/craig/craig1.pdf}}
 }
 
-@inbook{arquitetura-larman,
-  author = 	 {Craig Larman},
-  title = 	 {Practices For Scaling Lean And Agile},
-  year = 	 {2010},
-  chapter = {Design and Architecture}
-}
-
-@article{liskov-unclebob,
-  author = 	 {Robert C. Martin},
-  title = 	 {The Liskov Substitution Principle},
-  journal = {The C++ Report},
-  year = 	 {1996},
-  howpublished = {\url{http://www.objectmentor.com/resources/articles/lsp.pdf}}
+@book{lean-startup-ries,
+  author = 	 {Eric Ries},
+  title = 	 {Lean Startup},
+  year = 	 {2011},
+  publisher = {Editora Convencional},
+  howpublished = {\url{http://www.theleanstartup.com/book}}
 }
